--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ body {
   padding: 6rem;
   padding-left: 9rem;
   font-size: 1.8rem;
-  transform: skewX(-12deg); }
+  transform: skewX(-9deg); }
   .story__shape {
     width: 15rem;
     height: 15rem;
@@ -333,11 +333,31 @@ body {
     shape-outside: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg); }
+    transform: translateX(-3rem) skewX(9deg);
+    position: relative; }
   .story__img {
-    height: 100%; }
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden; }
   .story__text {
-    transform: skewX(12deg); }
+    transform: skewX(9deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all .5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: translateX(-4rem) scale(1); }
 
 .header {
   height: 95vh;
