--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -7,7 +7,7 @@
     padding: 6rem;
     padding-left: 9rem;
     font-size: $default-font-size;
-    transform: skewX(-12deg);
+    transform: skewX(-9deg);
 
     &__shape {
         width: 15rem;
@@ -17,14 +17,40 @@
         shape-outside: circle(50% at 50% 50%); // defines where the content flows around the element
         -webkit-clip-path: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%);
-        transform: translateX(-3rem) skewX(12deg);
+        transform: translateX(-3rem) skewX(9deg);
+        position: relative;
     }
 
     &__img {
         height: 100%;
+        transform: translateX(-4rem) scale(1.4);
+        backface-visibility: hidden;
     }
 
     &__text {
-        transform: skewX(12deg);
+        transform: skewX(9deg);
+    }
+
+    &__caption {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 20%);
+        color: $color-white;
+        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-align: center;
+        opacity: 0;
+        transition: all .5s;
+        backface-visibility: hidden;
+    }
+
+    &:hover &__caption {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+
+    &:hover &__img {
+        transform: translateX(-4rem) scale(1);
     }
 }
